--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>WebGIS - Explore Sleman</title>
+    <title>WebGIS Geowisata</title>
     <link rel="icon" href="favicon.svg" type="image/png">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -44,7 +44,7 @@
 
     <section id="detailsPage">
       <div>      
-        <iframe src="https://storymaps.arcgis.com/stories/4c81539d16544e41bec09dd475448da1?header" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <iframe src="https://storymaps.arcgis.com/stories/4c81539d16544e41bec09dd475448da1?header" width="100%" height="800px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
       </div>   
     </section>
             
